fix(OUT-715) : scrollbar added to details only

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,5 @@
 }
 
 .tapwrite-details-page {
-  flex-grow: 1;
-  overflow-y: auto;
-  height: calc(100vh - 300px);
+  height: 65vh;
 }
